Updates to rest apis and custom exceptions added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8090
 spring.application.name=restful-webservices
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 
 
