--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,33 @@
 server.port=8090
 spring.application.name=restful-webservices
 #logging.level.org.springframework=debug
+#management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql:localhost:3306/social-media-database
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=social-media-user
+spring.datasource.password=dummypassword
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name=username
+spring.security.user.password=password
+
+
+# \connect social-media-user@localhost:3306
+
+#docker run --detach 
+#--env MYSQL_ROOT_PASSWORD=dummypassword 
+#--env MYSQL_USER=social-media-user 
+#--env MYSQL_PASSWORD=dummypassword 
+#--env MYSQL_DATABASE=social-media-database 
+#--name mysql 
+#--publish 3306:3306 
+#mysql:8-oracle
+
 
 
